# gen-ai-2025

./: .gitignore  helper.py  pyproject.toml  req.txt
module-1/: README.md  m1.ipynb  task3.py  task4.py  task4.stream.py
module-1/chatbot/: Readme.md  chatbot.py
tasks/: README.md
tasks/module2-agents/: README.md
tasks/module3-rag/: README.md
tasks/module4-multimodal/: README.md
tasks/module5-advanced-finetuning/: README.md
tasks/module5-security/: README.md
tasks/module6-orchestration/: README.md
tasks/module7-multimodal-generation/: README.md
tasks/module8-evaluation-interpretability/: README.md
tasks/projects/: README.md
