[project]
name = "gen-ai"
version = "0.1.0"
description = "Covering GenAI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "ipykernel>=6.29.5",
    "langchain[google-vertexai,groq,openai]>=0.3.23",
    "langgraph>=0.3.27",
    "openai>=1.71.0",
    "pydantic>=2.11.2",
    "python-dotenv>=1.1.0",
    "streamlit>=1.44.1",
    "transformers>=4.51.1",
]
